--- a/APCS/_config.yml
+++ b/APCS/_config.yml
@@ -35,3 +35,11 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+
+
+
+sphinx:
+  config:
+    html_extra_path: ['assets']
+
+
