added comic mono; content cleanup first pass

--- a/APCS/Makefile
+++ b/APCS/Makefile
@@ -4,8 +4,14 @@
 html:
 	jb build .
 
+view:
+	open _build/html/index.html
+
 pdf:
 	jb build . --builder pdflatex
+
+viewpdf:
+	open _build/latex/book.pdf
 
 clean:
 	jb clean .
