--- a/APCS/_toc.yml
+++ b/APCS/_toc.yml
@@ -16,4 +16,5 @@ chapters:
       - file: setup/command_line
       - file: setup/installation_mac
       - file: setup/installation_windows
+    - file: unit0/index
     - file: about
