--- a/APCS/_toc.yml
+++ b/APCS/_toc.yml
@@ -19,4 +19,7 @@ chapters:
     - file: unit0/index
       sections:
       - file: unit0/Unit0_Assignment
+    - file: unit1/index
+      sections:
+      - file: unit1/Unit1_Assignment
     - file: about
