added unit 15 recursion

--- a/APCS/_toc.yml
+++ b/APCS/_toc.yml
@@ -61,4 +61,7 @@ chapters:
     - file: unit14_algorithms/index
       sections:
       - file: unit14_algorithms/Unit14_Assignment
+    - file: unit15_recursion/index
+      sections:
+      - file: unit15_recursion/Unit15_Assignment
     - file: about
